fix: padding in home hero section, home hero section height. Stretch video on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15125,3 +15125,22 @@ main>section:last-child{
 ================================================== */
 @font-face{font-family:'FontAwesome';src:url('../fonts/fontawesome-webfont.eot');src:url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),url('../fonts/fontawesome-webfont.woff') format('woff'),url('../fonts/fontawesome-webfont.ttf') format('truetype'),url('../fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 .fa-icons:before, .fa-icons:after { display: inline-block; font-family: "FontAwesome"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; text-rendering: auto; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
+@media (max-width: 900px) {
+    .ratio-off-lg-down {
+        --bs-aspect-ratio: 100%;
+    }
+        .ratio-off-lg-down iframe {
+        transform: scale(2)
+    }
+        .home-hero {
+        min-height: 500px;
+        height: calc(400 / 1920 * 100vw);
+    }
+}
+
+@media (max-width: 575.98px) {
+        .ratio-off-lg-down iframe {
+        transform: scale(3)
+    }
+}
